게시물 테스트 사진 변경

--- a/spring-template/src/main/resources/templates/main.html
+++ b/spring-template/src/main/resources/templates/main.html
@@ -69,7 +69,7 @@
             width: 240px;
             font-size: 17px;
             display: block;
-            font-weight: 1000;
+            font-weight: 500;
         }
 
         /* 드롭다운 스타일 */
@@ -161,13 +161,22 @@
         }
 
         .content-box-header > div {
+            width: 15%;
             display: inline-block;
             border: 1px solid #78B9BA;
             background-color: #78B9BA;
             color: white;
             margin-top: 20px;
-            padding: 10px 35px;
+            padding: 7px 30px;
+            margin-left: 3px;
+            margin-right: 3px;
             font-weight: bold;
+            font-size: 12px;
+        }
+
+        .content-box-header > div > a {
+            text-decoration: none;
+            color: white;
         }
 
     </style>
@@ -229,9 +238,9 @@
                 <li>
                     <div class="content-box">
                         <div class="content-box-header">
-                            <div>공지사항</div>
-                            <div>질문과 답변</div>
-                            <div>갤러리</div>
+                            <div><a href="">공지사항</a></div>
+                            <div><a href="">질문과 답변</a></div>
+                            <div><a href="">갤러리</a></div>
                         </div>
                     </div>
                 </li>
