--- a/spring-template/src/main/resources/templates/main.html
+++ b/spring-template/src/main/resources/templates/main.html
@@ -251,14 +251,14 @@
 <div class="login">
     <div class="login-section">
         <div class="login-box">
-            <a href="/login"><img src="../static/img/login.png" alt="" class="login-login"></a>
-            <a href="/register"><img src="../static/img/register.png" alt="" class="login-register"></a>
+            <a href="/login"><img src="/img/login.png" alt="" class="login-login"></a>
+            <a href="/register"><img src="/img/register.png" alt="" class="login-register"></a>
         </div>
     </div>
 </div>
 <div class="logo-wrap">
     <div class="logo">
-        <img src="../static/img/logo.png" alt="">
+        <img src="/img/logo.png" alt="">
     </div>
 
     <div class="nav">
@@ -310,17 +310,17 @@
                                 <li>
                                     시민연료 민들레, 10월 전국 집중 촛불집회에서 중...
                                     <span class="date">2024-11-11</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                                 <li>
                                     시민연료 민들레 추위원회 구성
                                     <span class="date">2024-11-10</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                                 <li>
                                     시민연료 민들레 ‘서울 취소력 영화제’ 공동 주최
                                     <span class="date">2024-11-09</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                             </ul>
                         </div>
@@ -337,17 +337,17 @@
                                 <li>
                                     시민연료 분무 공익법인 신청
                                     <span class="date">2024-11-11</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                                 <li>
                                     시민연료 민들레 유튜브로 만나는 위클리 민들...
                                     <span class="date">2024-11-10</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                                 <li>
                                     사단법인 시민연료 보루 홈페이지를 새롭게 오픈
                                     <span class="date">2024-11-09</span>
-                                    <img src="../static/img/plus.png" alt="plus" class="plus-icon">
+                                    <img src="/img/plus.png" alt="plus" class="plus-icon">
                                 </li>
                             </ul>
                         </div>
@@ -360,7 +360,7 @@
                             <div><a href="">안내센터</a></div>
                         </div>
                         <div class="content-box-body">
-                            <img src="../static/img/cscenter.png" alt="">
+                            <img src="/img/cscenter.png" alt="">
                         </div>
                     </div>
                 </li>
