--- a/spring-template/src/main/resources/templates/register_detail.html
+++ b/spring-template/src/main/resources/templates/register_detail.html
@@ -507,7 +507,7 @@
             </div>
             <div class="button-group">
                 <a href="/register" class="btn btn-back">이전단계</a>
-                <a href="/register/complete" class="btn btn-submit">회원가입</button>
+                <a href="/register/complete" class="btn btn-submit">회원가입</a>
             </div>
         </form>
     </div>
